fixed scroll to refresh on mobile?

--- a/layout.css
+++ b/layout.css
@@ -1,13 +1,8 @@
-.test-div {
-    background-color: red;
-    width: 100%;
-    height: 100%;
-}
-
 html {
     font-family:'Segoe UI', 'Tahoma', 'Geneva', 'Verdana', 'sans-serif';
     overscroll-behavior: none;
     overflow: auto;
+    height: 100svh;
 }
 
 body {
